[gd_scene load_steps=7 format=3 uid="uid://b0oyv1k0js4oi"]

[ext_resource type="Script" path="res://IceCream/Syrups/SyrupsHub.gd" id="1_chiv3"]
[ext_resource type="Texture2D" uid="uid://c4h3aipo0ok01" path="res://UI/LeftArrow.tres" id="2_gr1xq"]
[ext_resource type="Texture2D" uid="uid://ciy7oel6thya7" path="res://UI/RightArrow.tres" id="3_5cils"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hr8m7"]
size = Vector2(83.375, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjy1n"]
size = Vector2(78, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cqmcf"]

[node name="SyrupsHub" type="Node2D"]
script = ExtResource("1_chiv3")

[node name="Syrups" type="Node2D" parent="."]
position = Vector2(64, 64)

[node name="ShiftWorkspace" type="Area2D" parent="."]
z_index = 2

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="ShiftWorkspace"]
position = Vector2(-16.3125, 80)
shape = SubResource("RectangleShape2D_hr8m7")

[node name="CollisionShapeRight" type="CollisionShape2D" parent="ShiftWorkspace"]
position = Vector2(336, 82)
shape = SubResource("RectangleShape2D_wjy1n")

[node name="Left" type="Area2D" parent="ShiftWorkspace"]
visible = false
position = Vector2(10, 80)

[node name="Sprite2D" type="Sprite2D" parent="ShiftWorkspace/Left"]
texture = ExtResource("2_gr1xq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShiftWorkspace/Left"]
shape = SubResource("RectangleShape2D_cqmcf")

[node name="Right" type="Area2D" parent="ShiftWorkspace"]
visible = false
position = Vector2(310, 80)

[node name="Sprite2D" type="Sprite2D" parent="ShiftWorkspace/Right"]
texture = ExtResource("3_5cils")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShiftWorkspace/Right"]
shape = SubResource("RectangleShape2D_cqmcf")

[connection signal="mouse_shape_entered" from="ShiftWorkspace" to="." method="_on_shift_workspace_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="ShiftWorkspace" to="." method="_on_shift_workspace_mouse_shape_exited"]
